...
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Risposte -->
            <RadioGroup
                android:id="@+id/answerRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/answerOptionA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OptionA" />

                <RadioButton
                    android:id="@+id/answerOptionB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OptionB" />

                <RadioButton
                    android:id="@+id/answerOptionC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OptionC" />

                <RadioButton
                    android:id="@+id/answerOptionD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OptionD" />
            </RadioGroup>

            <!-- Pulsante per confermare la risposta -->

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewOrderStatusMessage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:background="@drawable/button_design_general"
                android:focusable="true"
                android:clickable="true"
                android:cursorVisible="true"
                android:padding="9dp"
                android:text="Conferma Risposta"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/timerProgressBar"
...
