...
                    android:background="@drawable/button_design_general"
                    android:clickable="true"
                    android:focusable="true"
                    android:cursorVisible="true"
                    android:onClick="onClickConsigliato"
                    android:padding="10dp"
                    android:text="Ordina"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
...
            android:text="Scegli dalla lista:"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinnerDrinks"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:spinnerMode="dropdown" />
...
        <TextView
            android:id="@+id/textViewOrderMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#757575"
            android:layout_below="@id/buttonOrder"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/buttonOrder"
            android:layout_width="150dp"
...
